--- a/css/desktop.css
+++ b/css/desktop.css
@@ -207,5 +207,86 @@ PAGE
 */
 
 @media (min-width: 765px) {
+  .title-about-me {
+    font-size: 40px; 
+  }
+
+  .title-2-about-me {
+    display: none;
+  }
+
+  .title-2-hidden-about-me {
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    font-size: 70px;
+    font-weight: 900;
+    text-align: center;
+    text-transform: uppercase;
+    padding-top: 10px;
+  }
+
+  /*
+  LOGO
+  */
+
+  .logo-soda {
+    width: 30%;
+  }
+
+  /*
+  PAST
+  CONCERTS
+  */
+
+  .past-concerts {
+    height: 800px;
+  }
+
+  .titles-concerts {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    justify-content: center;
+  }
+
+  .logo-p-past-concerts {
+    padding-top: 20px;
+  }
+
+  .concerts {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    width: 100%;
+    height: 100%;
+  }
+
+  .concert-1 {
+    width: 100%;
+    height: 50%;
+  }
+
+  .partners {
+    display: none;
+  }
+
+  /*
+  FOOTER
+  */
+
+  .footer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .logo-footer {
+    width: 5%;
+    padding-top: 25px;
+  }
   
+  .copyright {
+    padding-top: 25px;
+  }
 }
