--- a/css/style.css
+++ b/css/style.css
@@ -88,7 +88,7 @@ MAIN PAGE
 .dates {
   font-size: 27px;
   font-weight: bold;
-  padding-bottom: 6px
+  padding-bottom: 6px;
 }
 
 .location {
@@ -103,7 +103,6 @@ MAIN PROGRAM
 .main-program {
   background-image: url(../img/mobile/main-program-image.jpg);
   background-size: cover;
-
 }
 
 .main-program-title {
@@ -188,7 +187,7 @@ MAIN PROGRAM
 }
 
 .ticket:hover {
-  background-color:white;
+  background-color: white;
   transition: 0.3s;
 }
 
@@ -202,7 +201,7 @@ SPEAKERS
 */
 
 .featured-speakers {
-  background-color:#f7f7f9;
+  background-color: #f7f7f9;
   height: auto;
 }
 
@@ -295,39 +294,39 @@ SPEAKERS
 
 @media (min-width: 510px) {
   .members-h4 {
-  font-size: 25px;
+    font-size: 25px;
   }
 
   .members-h5 {
-  font-size: 19px;
+    font-size: 19px;
   }
 
   .members-p {
-  font-size: 13px;
+    font-size: 13px;
   }
 
   .title {
     font-size: 28px;
   }
-  
+
   .title-2 {
     font-size: 48px;
   }
-  
+
   .article-p {
     font-size: 18px;
   }
-  
+
   .dates {
     font-size: 30px;
   }
-  
+
   .location {
-    font-size: 22px;  
-  }  
+    font-size: 22px;
+  }
 }
 
-@media (min-width: 590px){
+@media (min-width: 590px) {
   .members-h4 {
     font-size: 28px;
   }
@@ -335,22 +334,22 @@ SPEAKERS
   .title {
     font-size: 31px;
   }
-  
+
   .title-2 {
     font-size: 51px;
   }
-  
+
   .article-p {
     font-size: 21px;
   }
-  
+
   .dates {
     font-size: 33px;
   }
-  
+
   .location {
-    font-size: 25px;  
-  }  
+    font-size: 25px;
+  }
 }
 
 @media (min-width: 650px) {
@@ -369,22 +368,22 @@ SPEAKERS
   .title {
     font-size: 34px;
   }
-  
+
   .title-2 {
     font-size: 54px;
   }
-  
+
   .article-p {
     font-size: 24px;
   }
-  
+
   .dates {
     font-size: 37px;
   }
-  
+
   .location {
-    font-size: 28px;  
-  }  
+    font-size: 28px;
+  }
 }
 
 /*
@@ -524,7 +523,7 @@ CONCERTS
 .past-concerts {
   background-color: #f7f7f9;
   padding-top: 50px;
-  height:1500px;
+  height: 1500px;
 }
 
 .titles-concerts {
@@ -615,7 +614,7 @@ PARTNERS
 }
 
 .coca-img {
-  width: 100%
+  width: 100%;
 }
 
 .river-img {
