--- a/css/style.css
+++ b/css/style.css
@@ -1,15 +1,14 @@
+@import url('https://fonts.cdnfonts.com/css/cocogoose');
+
 * {
   margin: 0;
   padding: 0;
 }
 
 body {
-  background: url(../img/mobile/caleb-george-pH88tHG-1yw-unsplash.jpg);
-  background-repeat: no-repeat;
-  background-size: cover;
   min-width: 375px;
   max-width: 768px;
-  font-family: 'Lato', sans-serif;
+  font-family: 'COCOGOOSE', sans-serif;
 }
 
 /*
@@ -18,8 +17,9 @@ HEADER
 
 header {
   width: 100%;
-  padding-top: 5px;
-  padding-left: 15px;
+  display: flex;
+  flex-direction: column;
+  font-family: 'Lato', sans-serif;
 }
 
 .nav-bar {
@@ -27,17 +27,26 @@ header {
   font-size: 32px;
 }
 
-.nav-bar-hidden {
+.nav-bar-hidden-2 {
+  display: none;
+}
+
+.desktop-nav-bar {
   display: none;
 }
 
 .fa-bars {
   color: black;
-  padding-top: 10px;
+  padding-top: 15px;
   display: flex;
+  font-family: 'Lato', sans-serif;
 }
 
 .img-logo-header-hidden {
+  display: none;
+}
+
+.socials {
   display: none;
 }
 
@@ -46,25 +55,32 @@ MAIN PAGE
 */
 
 .main-page {
+  background: url(../img/mobile/jean-philippe-delberghe-75xPHEQBmvA-unsplash.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
   display: flex;
   flex-direction: column;
-  margin-left: 18px;
-  margin-right: 18px;
+  padding-left: 18px;
+  padding-right: 24px;
 }
 
 .title {
   font-size: 25px;
   font-weight: 400;
   padding-top: 40px;
+  color: black;
+  font-family: 'Lato', sans-serif;
+  font-weight: 700px;
 }
 
 .title-2 {
   width: 100%;
-  font-size: 45px;
+  font-size: 40px;
   font-weight: 900;
   text-align: left;
   text-transform: uppercase;
   padding-top: 10px;
+  font-family: 'COCOGOOSE', sans-serif;
 }
 
 .title-2-hidden {
@@ -72,28 +88,33 @@ MAIN PAGE
 }
 
 .article {
-  background-color: grey;
+  background-color: #d3d3d3;
   border: 3px solid white;
   border-radius: 6px;
   width: 100%;
   height: auto;
   margin-top: 25px;
   margin-bottom: 25px;
+  line-height: 35px;
+  font-family: 'Lato', sans-serif;
+  font-weight: 600;
 }
 
 .article-p {
-  padding: 5px;
+  padding: 10px;
 }
 
 .dates {
-  font-size: 27px;
+  font-size: 23px;
   font-weight: bold;
-  padding-bottom: 6px;
+  padding-bottom: 15px;
 }
 
 .location {
-  font-size: 19px;
+  font-size: 18px;
   padding-bottom: 120px;
+  font-family: 'Lato', sans-serif;
+  font-weight: 600;
 }
 
 /*
@@ -101,12 +122,14 @@ MAIN PROGRAM
 */
 
 .main-program {
-  background-image: url(../img/mobile/main-program-image.jpg);
+  background-image: url(../img/mobile/background-black.png);
   background-size: cover;
+  font-family: 'Lato', sans-serif;
 }
 
 .main-program-title {
   padding-bottom: 50px;
+  padding-top: 30px;
 }
 
 .main-program-h3 {
@@ -126,14 +149,30 @@ MAIN PROGRAM
   color: red;
 }
 
+.activities {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  margin-top: 2rem;
+  margin-left: 1rem;
+  margin-right: 1rem;
+}
+
 .activity {
-  margin: 24px;
-  padding: 5px;
-  border-radius: 15px;
-  color: white;
+  color: #fff;
+  background-color: rgba(256, 256, 256, 0.1);
+  gap: 20px;
+  align-items: center;
+  max-width: 95%;
+  margin: 0;
+  padding: 1rem;
   display: flex;
   flex-direction: row;
-  background-color: rgba(128, 128, 128, 0.8);
+}
+
+.activity:hover {
+  transition: 0.3s;
+  color: #ec5242;
 }
 
 .activity-img {
@@ -160,13 +199,15 @@ MAIN PROGRAM
 }
 
 .activity-2 {
-  margin: 24px;
-  padding: 5px;
-  border-radius: 15px;
-  color: white;
+  color: #fff;
+  background-color: rgba(256, 256, 256, 0.1);
+  gap: 20px;
+  align-items: center;
+  max-width: 95%;
+  margin: 0;
+  padding: 1rem;
   display: flex;
   flex-direction: row;
-  background-color: rgba(128, 128, 128, 0.8);
 }
 
 .button-ticket {
@@ -200,55 +241,57 @@ FEATURED
 SPEAKERS
 */
 
-.featured-speakers {
-  background-color: #f7f7f9;
-  height: auto;
-}
-
-.featured-speakers-h3 {
-  font-size: 25px;
+.speakers {
   display: flex;
-  justify-content: center;
-  padding-top: 25px;
-}
-
-.members {
-  padding-top: 50px;
-  margin-left: 24px;
-}
-
-.members-team {
-  display: flex;
-  flex-direction: row;
-  padding-bottom: 25px;
+  flex-direction: column;
   align-items: center;
+  justify-content: center;
+  padding: 3rem;
+  row-gap: 2rem;
+  font-family: 'Lato', sans-serif;
 }
 
-.members-team-hidden {
-  display: none;
+.flex-card {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
+  gap: 2rem;
+  margin: 0 10% 0 10%;
 }
 
-.members-img-div {
-  width: 130%;
-  padding-top: 25px;
+.card {
+  display: flex;
+  border: none;
+  gap: 1rem;
+  font-size: small;
 }
 
-.members-img {
-  width: 80%;
+.card hr {
+  width: 2rem;
+  margin-left: 0;
 }
 
-.members-h4 {
-  font-size: 22px;
+.speaker_title {
+  color: #ec5242;
+  font-weight: bold;
+  font-style: italic;
 }
 
-.members-h5 {
-  font-size: 16px;
-  color: orangered;
+.content-card {
+  display: flex;
+  flex-direction: column;
+  align-items: left;
+  justify-content: center;
 }
 
-.members-p {
-  padding-top: 10px;
-  margin-right: 24px;
+.card-img {
+  width: 100px;
+  height: 100px;
+}
+
+.card-img-div {
+  width: 100px;
+  height: 100px;
 }
 
 .button-div {
@@ -278,10 +321,15 @@ SPEAKERS
   height: 40px;
 }
 
+/*
+PARTNERS
+*/
+
 .partners-hidden {
   display: none;
   background-color: #343a40;
   height: 300px;
+  font-family: 'Lato', sans-serif;
 }
 
 .footer-hidden {
@@ -410,6 +458,10 @@ PAGE
   justify-content: center;
 }
 
+.title-2-hidden-about-me {
+  display: none;
+}
+
 .article-about-me {
   background-color: white;
   border: 3px solid white;
@@ -426,6 +478,8 @@ PAGE
 .article-p-about-me {
   padding: 20px 5px;
   font-size: 18px;
+  font-family: 'Lato', sans-serif;
+  font-weight: 500;
 }
 
 .contact {
@@ -433,8 +487,10 @@ PAGE
   flex-direction: column;
   text-align: center;
   align-items: center;
-  padding-bottom: 20px;
+  padding-bottom: 70px;
   padding-top: 50px;
+  font-family: 'Lato', sans-serif;
+  font-weight: 500;
 }
 
 .contact-p {
@@ -582,13 +638,15 @@ PARTNERS
 
 .partners {
   background-color: #343a40;
-  height: 300px;
+  height: 350px;
+  font-family: 'Lato', sans-serif;
 }
 
 .logo-title-partner {
   display: flex;
   justify-content: center;
   font-size: 30px;
+  padding-top: 30px;
   color: white;
 }
 
@@ -652,6 +710,18 @@ footer {
   flex-direction: row;
   justify-content: center;
   align-items: center;
+}
+
+.black-footer {
+  background-color: #343a40;
+  background-size: cover;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 50px;
+  width: 100%;
+  color: white;
+  font-family: 'Lato', sans-serif;
 }
 
 .logo-footer {
