--- a/css/style.css
+++ b/css/style.css
@@ -64,10 +64,14 @@ MAIN PAGE
   padding-right: 24px;
 }
 
+.titles {
+  color: #ec5242;
+}
+
 .title {
   font-size: 25px;
   padding-top: 40px;
-  color: black;
+  color: #ec5242;
   font-family: 'Lato', sans-serif;
   font-weight: 700;
 }
@@ -97,6 +101,7 @@ MAIN PAGE
   line-height: 35px;
   font-family: 'Lato', sans-serif;
   font-weight: 600;
+  color: #272a31;
 }
 
 .article-p {
@@ -107,6 +112,7 @@ MAIN PAGE
   font-size: 23px;
   font-weight: bold;
   padding-bottom: 15px;
+  color: #272a31;
 }
 
 .location {
@@ -114,6 +120,7 @@ MAIN PAGE
   padding-bottom: 120px;
   font-family: 'Lato', sans-serif;
   font-weight: 600;
+  color: #272a31;
 }
 
 /*
@@ -182,12 +189,14 @@ MAIN PROGRAM
 .activity-h3 {
   font-size: 20px;
   padding-right: 10px;
+  color: #ec5242;
 }
 
 .activity-h3-hidden {
   display: none;
   font-size: 20px;
   padding-right: 10px;
+  color: #ec5242;
 }
 
 .activity-p {
@@ -443,6 +452,7 @@ PAGE
   padding-top: 40px;
   display: flex;
   justify-content: center;
+  color: #ec5242;
 }
 
 .title-2-about-me {
@@ -454,10 +464,12 @@ PAGE
   padding-top: 10px;
   display: flex;
   justify-content: center;
+  color: #ec5242;
 }
 
 .title-2-hidden-about-me {
   display: none;
+  color: #ec5242;
 }
 
 .article-about-me {
@@ -478,6 +490,7 @@ PAGE
   font-size: 18px;
   font-family: 'Lato', sans-serif;
   font-weight: 500;
+  color: #272a31;
 }
 
 .contact {
@@ -495,6 +508,7 @@ PAGE
   display: flex;
   justify-content: center;
   font-size: 16px;
+  color: #272a31;
 }
 
 .email {
@@ -503,6 +517,7 @@ PAGE
   font-size: 16px;
   font-weight: bold;
   text-decoration: underline;
+  color: #272a31;
 }
 
 /*
@@ -706,7 +721,6 @@ footer {
   background-color: white;
   display: flex;
   flex-direction: row;
-  justify-content: center;
   align-items: center;
 }
 
@@ -714,7 +728,6 @@ footer {
   background-color: #343a40;
   background-size: cover;
   display: flex;
-  justify-content: center;
   align-items: center;
   gap: 50px;
   width: 100%;
